# Morai_Autoware

./: README.md
.github/workflows/: pre-commit-ansible.yaml
src/core/autoware_system_designer/autoware_system_designer/autoware_system_designer/schema/0.3.0/: module.json
src/launcher/autoware_launch/autoware_launch/config/localization/: ekf_localizer.param.yaml
src/launcher/autoware_launch/autoware_launch/config/system/diagnostics/: autoware-morai.yaml
src/launcher/autoware_launch/autoware_launch/launch/: e2e_simulator.launch.xml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_description/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_launch/config/: gnss_poser.param.yaml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
src/launcher/autoware_launch/sensor_kit/morai_sensor_kit_launch/morai_sensor_kit_launch/scripts/: gps_to_navsatfix.py  imu_qos_relay.py  pointcloud_xyzi_to_xyzirc.py
src/launcher/autoware_launch/tier4_universe_launch/tier4_localization_launch/launch/pose_twist_estimator/: pose_twist_estimator.launch.xml
src/launcher/autoware_launch/vehicle/morai_vehicle_launch/morai_vehicle_description/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/vehicle/morai_vehicle_launch/morai_vehicle_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/vehicle/morai_vehicle_launch/morai_vehicle_launch/launch/: vehicle_interface.launch.xml
(+4 files in other folders)
